fixed hidden containers to have no javascript

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -29,16 +29,19 @@
       		<p>This guide provides resources on the basics of Marxism.</p>
       		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Basic Overview <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="overview" class="hiddenToggle">
+				<label class="hiddenHead" for="overview"><h2>Basic Overview</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="overview-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="overview-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="overview-books" class="hiddenToggle">
+						<label class="hiddenHead" for="overview-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Basic Principles of Marxism Leninism</h4>
@@ -51,7 +54,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="overview-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="overview-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Explaining stuff about Socialism that confuses you</h4>
@@ -69,16 +73,19 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Economic <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="economy" class="hiddenToggle">
+				<label class="hiddenHead" for="economy"><h2>Economic</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="economy-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="economy-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>								
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="economy-books" class="hiddenToggle">
+						<label class="hiddenHead" for="economy-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>Capital, Volume 1</h4>
@@ -91,7 +98,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="economy-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="economy-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Karl Marx - Das Kapital (Summary)</h4>
@@ -108,17 +116,20 @@
 					</div>
 				</div>
 			</div>
-				<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Historical <span class="hiddenIcon">▸</span></h2>
+			<div class="hidden">
+				<input type="checkbox" id="history" class="hiddenToggle">
+				<label class="hiddenHead" for="history"><h2>Historical</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="history-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="history-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="history-books" class="hiddenToggle">
+						<label class="hiddenHead" for="history-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>Critique of the Gotha Program</h4>
@@ -131,7 +142,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="history-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="history-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Historical Materialism Explained</h4>
@@ -149,16 +161,19 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Philosophical <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="philosophy" class="hiddenToggle">
+				<label class="hiddenHead" for="philosophy"><h2>Philosophical</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="philosophy-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="philosophy-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="philosophy-books" class="hiddenToggle">
+						<label class="hiddenHead" for="philosophy-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>What is Dialectical Materialism?</h4>
@@ -166,7 +181,7 @@
      							<p><a href="https://archive.org/details/WhatIsDialecticalMaterialismO.Yakhot">Text</a> | Audio Not Available</p></li>
      							<li><h4>A Textbook of Marxist Theory</h4>
      							<p>- Mikhail Shirokov, 383 pages.</p>
-     					    <p><a href="https://archive.org/details/ShirokovM.ATextbookOfMarxistPhilosophy/mode/2up?ui=embed&wrapper=false">Text</a> | Audio Not Available</p></li>
+								<p><a href="https://archive.org/details/ShirokovM.ATextbookOfMarxistPhilosophy/mode/2up">Text</a> | Audio Not Available</p></li>
 							    <li><h4>On Dialectical Materialism</h4>
      							<p>- Karl Marx, Friedrich Engels, Vladimir Lenin, 415 pages.</p>
      							<p><a href="https://archive.org/details/DialecticalMaterialismMarxEngelsLenin/mode/2up">Text</a> | Audio Not Available</p></li>
@@ -174,18 +189,19 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="philosophy-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="philosophy-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>How To Think Like a Vietnamese Communist: An Intro to Dialectical Materialism!</h4>
 								<p>- Luna Oi, 41 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=neI-ol2AowM">Youtube</a></p></li>
+								<p><a href="https://www.youtube.com/watch?v=neI-ol2AowM">Youtube</a></p></li>
 								<li><h4>Demystifying Marx: What is Dialetical Materialism?</h4>
 								<p>- Leaflets, 5 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=hYNOrTE2BdQ">Youtube</a></p></li>
+								<p><a href="https://www.youtube.com/watch?v=hYNOrTE2BdQ">Youtube</a></p></li>
 								<li><h4>Fundamentals of Marx: Dialectics</h4>
 								<p>- The Marxist Project, 12 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=GNHzVeC7jeY">Youtube</a></p></li>
+								<p><a href="https://www.youtube.com/watch?v=GNHzVeC7jeY">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
