--- a/pages/guides/feminism_gender.html
+++ b/pages/guides/feminism_gender.html
@@ -29,16 +29,19 @@
 			<p>This Guide covers the topics of patriarchy, gender and queerness from a Marxist framework.</p>
 			<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Feminism Overview <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="overview" class="hiddenToggle">
+				<label class="hiddenHead" for="overview"><h2>Feminism Overview</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="overview-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="overview-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="overview-books" class="hiddenToggle">
+						<label class="hiddenHead" for="overview-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Philosophical Trends in the Feminist Movement</h4>
@@ -51,7 +54,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="overview-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="overview-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Angela Davis Criticizes "Mainstream Feminism" / Bourgeois Feminism</h4>
@@ -63,22 +67,26 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Gender <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="gender" class="hiddenToggle">
+				<label class="hiddenHead" for="gender"><h2>Gender</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="gender-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="gender-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="gender-books" class="hiddenToggle">
+						<label class="hiddenHead" for="gender-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="gender-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="gender-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
@@ -86,22 +94,26 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Patriarchy <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="patriarchy" class="hiddenToggle">
+				<label class="hiddenHead" for="patriarchy"><h2>Patriarchy</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="patriarchy-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="patriarchy-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="patriarchy-books" class="hiddenToggle">
+						<label class="hiddenHead" for="patriarchy-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="patriarchy-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="patriarchy-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
@@ -109,16 +121,19 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Queerness <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="queer" class="hiddenToggle">
+				<label class="hiddenHead" for="queer"><h2>Queerness</h2></label>
 				<div class="hiddenBody">
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="queer-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="queer-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="queer-books" class="hiddenToggle">
+						<label class="hiddenHead" for="queer-books"><h3>Books</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Trans Liberation: Beyond Pink or Blue</h4>
@@ -128,7 +143,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<input type="checkbox" id="queer-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="queer-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Trans Liberation & Marxism: Is Gender Identity Actually Anti-Materialist?</h4>
