--- a/pages/resources/news.html
+++ b/pages/resources/news.html
@@ -26,16 +26,9 @@
 			<hr/>
 		</header>
 		<div class="container">
-			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
-				<div class="hiddenBody">
-     					<p><a href="">Resource Name</a> (<a href="">rss</a>)</p>
-				</div>
-			</div>
-			-->
-			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">International <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="world" class="hiddenToggle">
+				<label class="hiddenHead" for="world"><h2>International</h2></label>
 				<div class="hiddenBody">
 					<p><a href="https://www.democracynow.org/">Democracy Now!</a> (<a href="https://www.democracynow.org/democracynow.rss/">rss</a>)</p>
 					<p><a href="https://internationalmagz.com/">International Magazine</a></p>
@@ -43,14 +36,16 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Latin America <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="latin-america" class="hiddenToggle">
+				<label class="hiddenHead" for="latin-america"><h2>Latin America</h2></label>
 				<div class="hiddenBody">
 					<p><a href="https://en.granma.cu/">Granma</a> (<a href="http://en.granma.cu/feed/">rss</a>)</p>
 					<p><a href="https://kawsachunnews.com/">Kawsachun News</a> (<a href="https://kawsachunnews.com/feed">rss</a>)</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">U.S. <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="us" class="hiddenToggle">
+				<label class="hiddenHead" for="us"><h2>U.S.</h2></label>
 				<div class="hiddenBody">
 					<p><a href="https://www.fightbacknews.org/">Fight Back News</a> (<a href="https://www.fightbacknews.org/feed.xml">rss</a>)</p>
 					<p><a href="https://healthliberationnow.com/">Health Liberation Now</a> (<a href="https://healthliberationnow.com/feed/">rss</a>)</p>
