--- a/pages/resources/socialmedia.html
+++ b/pages/resources/socialmedia.html
@@ -26,27 +26,12 @@
 			<hr/>
 		</header>
 		<div class="container">
-			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="discord" class="hiddenToggle">
+				<label class="hiddenHead" for="discord"><h2>Discord</h2></label>
 				<div class="hiddenBody">
-     				<a href=""><p>Resource Name</p></a>
-				</div>
-			</div>
-			-->
-			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Discord <span class="hiddenIcon">▸</span></h2>
-				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href=""><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">▸</span></h3>
+						<label class="hiddenHead" for="discord-news"><h3>News</h3></label>
 						<div class="hiddenBody">
 							<a href="https://discord.gg/yvkBs7mUGD/"><p>Proletarian Wii News Channel #2</p></a>
 						</div>
@@ -54,58 +39,30 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Facebook <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="facebook" class="hiddenToggle">
+				<label class="hiddenHead" for="facebook"><h2>Facebook</h2></label>
 				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href=""><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
 					<p>Nothing found so far.</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Instagram <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="instagram" class="hiddenToggle">
+				<label class="hiddenHead" for="instagram"><h2>Instagram</h2></label>
 				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href=""><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
 					<p>Nothing found so far.</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Mastodon <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="mastodon" class="hiddenToggle">
+				<label class="hiddenHead" for="mastodon"><h2>Mastodon</h2></label>
 				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href=""><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
 					<p>Nothing found so far.</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Reddit <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="reddit" class="hiddenToggle">
+				<label class="hiddenHead" for="reddit"><h2>Reddit</h2></label>
 				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href="https://www.reddit.com/"><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
 					<a href="https://www.reddit.com/r/academicmarxism"><p>r/academicmarxism</p></a>
 					<a href="https://www.reddit.com/r/asksocialists"><p>r/asksocialists</p></a>
 					<a href="https://www.reddit.com/r/antifascistsofreddit"><p>r/antifascistsofreddit</p></a>
@@ -142,38 +99,26 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Tumblr <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="tumblr" class="hiddenToggle">
+				<label class="hiddenHead" for="tumblr"><h2>Tumblr</h2></label>
 				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href=""><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
 					<p>Nothing found so far.</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Twitter <span class="hiddenIcon">▸</span></h2>
+				<input type="checkbox" id="twitter" class="hiddenToggle">
+				<label class="hiddenHead" for="twitter"><h2>Twitter</h2></label>
 				<div class="hiddenBody">
-					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h3>
-						<div class="hiddenBody">
-							<a href="https://twitter.com/"><p>Resource Name</p></a>
-						</div>
-					</div>
-					-->
-					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Art <span class="hiddenIcon">▸</span></h3>
+						<input type="checkbox" id="art" class="hiddenToggle">
+						<label class="hiddenHead" for="art"><h3>Art</h3></label>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/communistposter/"><p>@communistposter</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">History <span class="hiddenIcon">▸</span></h3>
+						<input type="checkbox" id="history" class="hiddenToggle">
+						<label class="hiddenHead" for="history"><h3>History</h3></label>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/leftinthebay"><p>@leftinthebay</p></a>
 							<a href="https://twitter.com/inthespirit"><p>@inthespirit</p></a>
@@ -181,7 +126,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">▸</span></h3>
+						<input type="checkbox" id="news" class="hiddenToggle">
+						<label class="hiddenHead" for="news"><h3>News</h3></label>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/theintlmagz"><p>@theintlmagz</p></a>
 							<a href="https://twitter.com/thecadrejournal"><p>@thecadrejournal</p></a>
@@ -194,7 +140,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Theory <span class="hiddenIcon">▸</span></h3>
+						<input type="checkbox" id="theory" class="hiddenToggle">
+						<label class="hiddenHead" for="theory"><h3>Theory</h3></label>
 						<div class="hiddenBody">
 							<a href="https://twitter.com/communistcenter"><p>@communistcenter</p></a>
 							<a href="https://twitter.com/nkrumahquotes"><p>@nkrumahquotes</p></a>
